# tweet-crawler

./: .gitignore  pyproject.toml
src/data/: TLRailUK_latest_100_tweets.csv
src/tweet_crawler/: collect_data.py  main.py
